--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CyberClarityGlobal – GRC, Privacy & Cybersecurity Consulting</title>
-    <meta name="description" content="Actionable ISO 27001, SOC 2, GDPR, TPRM and security programs for startups and scaleups. Fixed-fee bundles and advisory retainers." />
-    <link rel="canonical" href="https://yourdomain.com/" />
-    <meta property="og:title" content="CyberClarityGlobal – Secure, Ship, Scale" />
-    <meta property="og:description" content="ISO 27001, SOC 2, GDPR, TPRM, incident readiness." />
-    <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
-  <body class="bg-[#0a1621]">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CyberClarityGlobal – GRC, Privacy & Cybersecurity Consulting</title>
+  <meta name="description" content="Actionable ISO 27001, SOC 2, GDPR, TPRM and security programs for startups and scaleups." />
+  <link rel="canonical" href="https://yourdomain.com/" />
+  <meta property="og:title" content="CyberClarityGlobal – Secure, Ship, Scale" />
+  <meta property="og:description" content="ISO 27001, SOC 2, GDPR, TPRM, incident readiness." />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Tally embed script (add this) -->
+  <script async src="https://tally.so/widgets/embed.js"></script>
+</head>
+<body class="bg-[#0a1621]">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
